--- a/todo.txt
+++ b/todo.txt
@@ -23,12 +23,46 @@ Formats
 + future player
 + ben daglish
 
+- SonicArranger, all three variants
+- MusicMaker
++ SoundFX 1.x
+- Synthesis
+- FTM
++ InStereo
++ Ron Klaren + CustomMade
++ MusicMakerV8
+
+FEATURE
+- Now that we have multiple monitor support with P96 libraries it is possible to have HippoPlayer playing in its own Native screen and have RTG Workbench active at the same time on the other monitor. But as soon as the Screen on which HippoPlayer is placed is not active anymore the Scopes stop updating, only the timer updates.
+Would it be possible to add an option for the Scopes to update at all times regardless if the screen is active or not?
+
+BUG
+- disable non-ahi replayers
+- load cus.bioniccommando
+-> boom
+
+BUG
+- artofnoise: schubidu
+- extra beeps
+
+BUG
+- When using AHI as output device I always get the error "Trouble with the player group". I have copied the new .group file too, of course.
+
 ONLY ON ASM only build
 + Press E -> enforcer hits
 
 BUG:
 - open DeltaMusic_v2.0.s 
 -> bomb -> thinks it is a module and calls code from within text file
+
+NOT BUG:
+- open PRT file which is gz -> unknown
+- file was renamed
+
+BUG:
+- open xl Patternscope
+- play ps3m module 
+--> should switch to normal size?
 
 FIXED
 + RMB+Pr: broken layout
