--- a/todo.txt
+++ b/todo.txt
@@ -62,6 +62,29 @@ Formats
 - special fx
 
 FIXED
+- play tim follin: ghouls and ghosts 
+  three times with enter -> crash
+
+TODO
+- check TME on amiga
+
+FIXED
+- tim follin not loading on kick 1.3>/tmp/1
+
+FIXED
+- check instereo1 and 2
+
+FIXED
+- reuse of previously decompressed replayer not working
+
+FIXED
+- ps3m id, goes through all: internal group eagle, no need
+
+FIXED
+- very slow ids: HIPPEL, ACTIVISION PRO
+
+
+FIXED
 - start hip with "exp-prg"
 - pause 
 - switch to fav,
@@ -231,9 +254,10 @@ FIXED: BIG memory leak
 
 TODO
 - VisualPrefs
--- Set Screen title bar height to max
--- Hippo draws top part of window bad
--- Set large bottom border 
+-- Set Screen title bar height to 8 
+    -> zipped window title is too tall
+    -> normal window top part is bad
+-- Set Window title bar height to 8 -> all ok
 
 TODO
 - cräshäsi joku moduuli zipattu: HeHasNoFace, DataJack
