--- a/todo.txt
+++ b/todo.txt
@@ -69,6 +69,58 @@ PATTERNINIT - EP
 + KRIS
 + Mugician2
 
+TODO
+- click scope window: switch visualization mode
+- allow changing button icon gfx and height
+
+TODO
+- AREXX: check that file adds etc are working in correct list mode
+
+TODO
+- play "cruisin.ahx", wait until until end
+--> cia errors when trying to switch tune
+--> buggy AHX code
+
+TODO: When a module has more than 1 sub-song it will go to next 
+  subsong even when in random play mode. 
+  I think in random play mode it should only play first song, since some have quite a 
+  few and most sub-songs are then short sound effects.
+FIXED Some formats display the HippoScope, but the scope is not working at 
+  all, for example: Future Composer 1.0-1.3, 1.4, SoundFX, 
+  Art of Noice 4ch, Game Music Creator, BP Soundmon v2.0, Oktalyzer, 
+  Sonic Arranger, Chiptracker [EP]
+
+
+CRASH:
+- mortimer twang: unnamed.psid
+                  seved skee
+-- play for a while, then crash?
+--> didn't crash for me
+
+TODO:
+- hippel-coso sample scope support
+
+FIXED CRASH:
+- save state filebrowse into a VOLUME
+- restart hippo so that VOLUME is not available
+- crashh
+
+FIXED LOAD HANG:
+- use ftpmount
+- normal module load is obviously not very good, does not check for
+  -1 error code from Read
+
+CRASH:
+- AHI Mode: ForteMedia801:Fast 16 bit Stereo+
+- Only happens with "steenl", works ok with "indigolemon"
+Steps:
+- Start playback with PS3M
+- ahi_end  -> crash
+- Sampleplay: works
+
+TODO:
+- PS3M: check if AHI enabled, skip all patternscope stuff
+
 CRASH?
 - have an ahi init error
 - press "PRG"
@@ -238,7 +290,7 @@ FIXED: BUG - kick13
 --> scope empty
 
 
-NOTES PROBLEM?
+FIXED: NOTES PROBLEM?
 - play "happy_tune-chip.xm"
 - first three notes should be maybe: C-3, D#3, B-3 
 
